change prettier config

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,12 @@
     "es6": true,
     "node": true
   },
-  "extends": ["react-app", "react-app/jest"],
+  "extends": [
+    "react-app",
+    "react-app/jest",
+    "some-other-config-you-use",
+    "prettier"
+  ],
   "plugins": ["react"],
   "rules": {
     "react/prop-types": 0,
